--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,12 @@ spring.datasource.url=jdbc:oracle:thin:@//192.168.0.123:1521/ORCL
 spring.datasource.username=PROYECTO
 spring.datasource.password=123
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
-spring.jpa.database-platform=org.hibernate.dialect.OracleDialect
-spring.jpa.hibernate.use-new-id-generator-mappings=false
-spring.jpa.hibernate.ddl-auto=create
+
+
+spring.jpa.properties.hibernate.format_sql=true
+logging.level.org.hibernate.SQL=DEBUG
+logging.pattern.dateformat=hh:mm
+spring.main.banner-mode=off
+spring.thymeleaf.cache=false
+logging.level.org.type.descriptor.sql.BasicBinder=TRACE
+spring.devtools.livereload.enabled=true
