--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,10 @@
-spring.datasource.url=jdbc:oracle:thin:@//192.168.0.123:1521/ORCL
-spring.datasource.username=PROYECTO
+spring.datasource.url=jdbc:oracle:thin:@localhost:1521:ORCL
+spring.datasource.username=BIENES_RAICES
 spring.datasource.password=123
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
-
-
 spring.jpa.properties.hibernate.format_sql=true
 logging.level.org.hibernate.SQL=DEBUG
-!
+logging.pattern.dateformat=hh:mm
 spring.main.banner-mode=off
 spring.thymeleaf.cache=false
 logging.level.org.type.descriptor.sql.BasicBinder=TRACE
