--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,7 @@
+
+
+
+server.port = 80
 spring.datasource.url=jdbc:oracle:thin:@localhost:1521:ORCL
 spring.datasource.username=BIENES_RAICES
 spring.datasource.password=123
@@ -9,3 +13,15 @@ spring.main.banner-mode=off
 spring.thymeleaf.cache=false
 logging.level.org.type.descriptor.sql.BasicBinder=TRACE
 spring.devtools.livereload.enabled=true
+
+
+#info to use email acount for users
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username= arjoz988@gmail.com
+spring.mail.password= kwqrpdxqfjifojfy
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+
+#server name for sending emails 
+servidor.http=localhost
