--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-spring.datasource.url=jdbc:oracle:thin:@localhost:1521:ORCL
-spring.datasource.username=BIENES_RAICES
+spring.datasource.url=jdbc:oracle:thin:@192.168.0.123:1521:ORCL
+spring.datasource.username=PROYECTO
 spring.datasource.password=123
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
 spring.jpa.properties.hibernate.format_sql=true
