--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:oracle:thin:@192.168.0.123:1521:ORCL
-spring.datasource.username=PROYECTO
 server.port = 8080
+spring.datasource.url=jdbc:oracle:thin:@localhost:1521:ORCL
+spring.datasource.username=BIENES_RAICES
 spring.datasource.password=123
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
 spring.jpa.properties.hibernate.format_sql=true
